tests/error/linear_errors/unused_field3.err
Error: Drop violation (at $FILE:19:8)
   | 
17 | 
18 | @guppy
19 | def foo(s: MyStruct1 @owned) -> int:
   |         ^^^^^^^^^^^^^^^^^^^ Field `s.x.q2` with non-droppable type `qubit` is leaked

Help: Make sure that `s.x.q2` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
